Fixed layout overflow issues

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -82,6 +82,11 @@ i
   bottom: 2%;
   left: 2%;
 }
+.avatarList
+{
+  height: 73%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
 .loading
 {
   position: fixed;
